--- a/Games Rudge Studios.html
+++ b/Games Rudge Studios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Julio Basílio</title>
+    <title>GR STUDIOS PROGRAMMING</title>
     <link rel="shortcut icon" href="Grstudiosicon.ico">
     <style>
         /* Estilos gerais */
