Atualizar o Games Rudge Studios.html

--- a/Games Rudge Studios.html
+++ b/Games Rudge Studios.html
@@ -209,7 +209,7 @@
         <p>Visite alguns de nossos projetos</p>
         <div class="sites">
             <a href="https://patman-wq.github.io/SitedeLoginsimples/pc.html" target="_blank">Site de Login</a>
-            <a href="https://site2.com" target="_blank">Site de jogos</a>
+            <a href="https://patman-wq.github.io/Receita/pc.html" target="_blank">Site de jogos</a>
         </div>
     </div>
 
